--- a/.github/workflows/diambars.yml
+++ b/.github/workflows/diambars.yml
@@ -1,6 +1,8 @@
 name: 'Diambars'
-on: [push]
-
+on:
+  push:
+  schedule:
+    - cron: '0 0 * * *'
 jobs:
   create_diambars:
     runs-on: ubuntu-latest
